--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Pelado Nerd</title>
+  <title>Xavier Carrera</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
