--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
         <!-- Your Name -->
-        <h1>Pelado Nerd</h1>
+        <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
         <p>Hola. Esta es una lista de mis redes sociales para que puedas encontrarlas de forma fácil. De nada. Ah, no dijiste gracias? Bueno, no me sorprende.</p>
