--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <br>
         <br>
-        <a class="button button-facebook" href="https://slack.peladonerd.com"><img class="icon" src="icons/facebook.svg">Facebook</a> <br>
+        <a class="button button-facebook" href="https://www.facebook.com/XaviAlexander07"><img class="icon" src="icons/facebook.svg">Facebook</a> <br>
         <a class="button button-kit" href="https://kit.co/pablokbs"><img class="icon" src="icons/kit.svg">Mi hardware</a> <br>
         <a class="button button-youtube" href="https://youtube.com/pablokbs"><img class="icon" src="icons/youtube.svg">Mi canal de vlogs</a> <br>
         <a class="button button-mixer" href="https://speakerdeck.com/pablokbs"><img class="icon" src="icons/slides.svg">Slides</a> <br>     
