--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <br>
         <br>
         <a class="button button-facebook" href="https://www.facebook.com/XaviAlexander07"><img class="icon" src="icons/facebook.svg">Facebook</a> <br>
-        <a class="button button-kit" href="https://kit.co/pablokbs"><img class="icon" src="icons/kit.svg">Mi hardware</a> <br>
-        <a class="button button-youtube" href="https://youtube.com/pablokbs"><img class="icon" src="icons/youtube.svg">Mi canal de vlogs</a> <br>
+        <a class="button button-instagram" href="https://www.instagram.com/xcarrera07/"><img class="icon" src="icons/instagram.svg">Instagram</a> <br>
+        <a class="button button-linkedin" href="https://www.linkedin.com/in/xavier-c-a86b41167/"><img class="icon" src="icons/linkedin.svg">Linkedin</a> <br>
         <a class="button button-mixer" href="https://speakerdeck.com/pablokbs"><img class="icon" src="icons/slides.svg">Slides</a> <br>     
         <a class="button button-snapchat" href="https://merch.peladonerd.com/"><img class="icon" src="icons/tshirt.svg">Merchandising</a> <br>
         <a class="button button-reddit" href="https://reddit.com/r/peladonerd"><img class="icon" src="icons/reddit.svg">Reddit</a>
