--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
-        <a class="small button-twitter" href="https://twitter.com/pablokbs"><img class="icon" src="icons/twitter.svg"></a> 
-        <a class="small button-instagram" href="https://instagram.com/pablokbs"><img class="icon" src="icons/instagram.svg"></a>
-        <a class="small button-github" href="https://github.com/pablokbs"><img class="icon" src="icons/github.svg"></a> <br>
+        <a class="small button-twitter" href="https://twitter.com/XaviAlexander07"><img class="icon" src="icons/twitter.svg"></a> 
+        <a class="small button-instagram" href="https://instagram.com/xcarrera07"><img class="icon" src="icons/instagram.svg"></a>
+        <a class="small button-github" href="https://github.com/xcarrera07"><img class="icon" src="icons/github.svg"></a> <br>
 
         </div>
         <br>
@@ -118,10 +118,7 @@
         <a class="button button-facebook" href="https://www.facebook.com/XaviAlexander07"><img class="icon" src="icons/facebook.svg">Facebook</a> <br>
         <a class="button button-instagram" href="https://www.instagram.com/xcarrera07/"><img class="icon" src="icons/instagram.svg">Instagram</a> <br>
         <a class="button button-linkedin" href="https://www.linkedin.com/in/xavier-c-a86b41167/"><img class="icon" src="icons/linkedin.svg">Linkedin</a> <br>
-        <a class="button button-mixer" href="https://speakerdeck.com/pablokbs"><img class="icon" src="icons/slides.svg">Slides</a> <br>     
-        <a class="button button-snapchat" href="https://merch.peladonerd.com/"><img class="icon" src="icons/tshirt.svg">Merchandising</a> <br>
-        <a class="button button-reddit" href="https://reddit.com/r/peladonerd"><img class="icon" src="icons/reddit.svg">Reddit</a>
-        <a class="button button-medium" href="mailto:pablo@peladonerd.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
+        <a class="button button-medium" href="mailto:error404pro@protonmail.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
         <a class="button acuity-embed-button-local" href="https://app.acuityscheduling.com/schedule.php?owner=21209490&appointmentType=18289396" target="_blank"><img class="icon" src="icons/calendar.svg">Consultorías</a><br><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/21209490.css" id="acuity-button-styles"/><script src="https://embed.acuityscheduling.com/embed/button/21209490.js" async></script>
         <a class="button button-soundcloud" href="https://ko-fi.com/peladonerd"><img class="icon" src="icons/coffee.svg">Comprame un cafecito</a> <br>
         <a class="button button-snapchat" href="sponsors.html"><img class="icon" src="icons/dollar.svg">Sponsorea mis videos</a> <br>
