--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <a class="button button-medium" href="mailto:error404pro@protonmail.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
         <a class="button acuity-embed-button-local" href="https://app.acuityscheduling.com/schedule.php?owner=21209490&appointmentType=18289396" target="_blank"><img class="icon" src="icons/calendar.svg">Consultorías</a><br><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/21209490.css" id="acuity-button-styles"/><script src="https://embed.acuityscheduling.com/embed/button/21209490.js" async></script>
         <a class="button button-soundcloud" href="https://ko-fi.com/peladonerd"><img class="icon" src="icons/coffee.svg">Comprame un cafecito</a> <br>
-        <a class="button button-snapchat" href="sponsors.html"><img class="icon" src="icons/dollar.svg">Sponsorea mis videos</a> <br>
+        <a class="button button-telegram" href="t.me/ciberseguridadmundial"><img class="icon" src="icons/telegram.svg">Telegram</a> <br>
           <br>
         <footer>
-          <p>Código para esta página <a href="https://github.com/pablokbs/peladonerd-web">acá</a>.</p>
+          <p>Código para esta página <a href="https://github.com/xcarrera07/LINK">acá</a>.</p>
         </footer>
           
       </div>
