--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a class="button button-telegram" href="https://t.me/ciberseguridadmundial"><img class="icon" src="icons/telegram.svg">Telegram</a> <br>
           <br>
         <footer>
-          <p>Código para esta página <a href="https://github.com/xcarrera07/LINK">acá</a>.</p>
+          <p> © Copyright xcarrera07 All Rights Reserved <a href="https://github.com/xcarrera07/LINK">click aquí</a>.</p>
         </footer>
           
       </div>
