--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <a class="button button-linkedin" href="https://www.linkedin.com/in/xavier-c-a86b41167/"><img class="icon" src="icons/linkedin.svg">Linkedin</a> <br>
         <a class="button button-medium" href="mailto:error404pro@protonmail.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
         <a class="button acuity-embed-button-local" href="https://app.acuityscheduling.com/schedule.php?owner=21209490&appointmentType=18289396" target="_blank"><img class="icon" src="icons/calendar.svg">Consultorías</a><br><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/21209490.css" id="acuity-button-styles"/><script src="https://embed.acuityscheduling.com/embed/button/21209490.js" async></script>
-        <a class="button button-Bitcoin" href="https://paxful.com?r=zGMYywBjNQW"><img class="icon" src="icons/dollar.svg">Compra Bitcoin</a> <br>
+        <a class="button button-snapchat" href="https://paxful.com?r=zGMYywBjNQW"><img class="icon" src="icons/dollar.svg">Compra Bitcoin</a> <br>
         <a class="button button-telegram" href="https://t.me/ciberseguridadmundial"><img class="icon" src="icons/telegram.svg">Telegram</a> <br>
           <br>
         <footer>
