--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p>Hola. Esta es una lista de mis redes sociales para que puedas encontrarlas de forma fácil. De nada. Ah, no dijiste gracias? Bueno, no me sorprende.</p>
+        <p> Hola. Esta es una lista de mis redes sociales <a href="paypal.me/XavierCarrera">click aquí</a> </p>
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
