--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola. Esta es una lista de mis redes sociales <a href="paypal.me/XavierCarrera">click aquí</a> </p>
+        <p> Hola. Esta es una lista de mis redes sociales
+          Donaciones <a href="https://www.paypal.com/paypalme/XavierCarrera">Paypal</a> </p>
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
