--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola. Esta es una lista de mis redes sociales
-          Donaciones <a href="https://www.paypal.com/paypalme/XavierCarrera">Paypal</a> </p>
+        <p> Hola. Esta es una lista de mis redes sociales. <a href="https://www.paypal.com/paypalme/XavierCarrera">Donaciones</a> </p>
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
@@ -133,13 +132,13 @@
   </div>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GR82G97BBQ"></script>
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CME7QLH9B7"></script>
+<script>G-CME7QLH9B7
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GR82G97BBQ');
+  gtag('config', 'G-CME7QLH9B7');
 </script>
 
 <!-- End Document
