--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CME7QLH9B7"></script>
-<script>G-CME7QLH9B7
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
