--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <!-- Short Bio -->
         <p> Hola. Esta es una lista de mis redes sociales. <a href="https://www.paypal.com/paypalme/XavierCarrera">Donaciones</a> </p>
-        <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_100x26.png" alt="PayPal" />
+        <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_100x26.png" alt="PayPal" href="https://www.paypal.com/paypalme/XavierCarrera" />
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
