--- a/index.html
+++ b/index.html
@@ -104,8 +104,12 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola. Esta es una lista de mis redes sociales. <a href="https://www.paypal.com/paypalme/XavierCarrera">Donaciones</a> </p>
-        <img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_100x26.png" alt="PayPal" href="https://www.paypal.com/paypalme/XavierCarrera" />
+        <p> Hola. Esta es una lista de mis redes sociales. <form action="https://www.paypal.com/donate" method="post" target="_top">
+<input type="hidden" name="hosted_button_id" value="4DUPPWV73KYJL" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_PA/i/scr/pixel.gif" width="1" height="1" />
+</form> </p>
+        
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
