--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola. Esta es una lista de mis redes sociales. <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente. 👨🏻‍💻 <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="hosted_button_id" value="4DUPPWV73KYJL" />
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
         <img alt="" border="0" src="https://www.paypal.com/en_PA/i/scr/pixel.gif" width="1" height="1" />
