--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
         <h1>Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente. Pentester - Analista de Seguridad y Ataques <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="hosted_button_id" value="4DUPPWV73KYJL" />
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-        <img alt="" border="0" src="https://www.paypal.com/en_PA/i/scr/pixel.gif" width="1" height="1" />
-        </form> </p>
+        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente.</p> <h1>Pentester - Analista de Seguridad y Ataques</h1> 
         
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
