--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
 
         <!-- Your Name -->
-        <h1>Xavier Carrera</h1>
+        <h1>Ing. Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente.</p> <h1>Pentester - Analista de Seguridad y Ataques</h1> 
+        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente.</p> <h1>Pentester - Analista de Seguridad y Ataques - Ethical Hacker</h1> 
         
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
