--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         <h1>Ing. Xavier Carrera</h1>
 
         <!-- Short Bio -->
-        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente.</p> <h1>Pentester - Analista de Seguridad y Ataques - 
+        <p> Hola, aquí te dejo la lista de mis redes sociales para que me contactes directamente.</p> <h1>Pentester - 
+        Analista de Seguridad y Ataques - 
         Ethical Hacker</h1> 
         
         
